# banking

./: .coveragerc  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  RAG_PIPELINE_README.md  RAG_QUICK_START.md  README.md  ai_governance_pipeline.py  analytics_pipeline.py  api_server.py  config.py  config.yaml  docker-compose.yml  example_rag_usage.py  load_depts_1_to_8.py  load_new_departments.py  ml_job_scheduler.py  model_training_pipeline.py  preprocessing_pipeline.py  preprocessing_scheduler.py  pyproject.toml  pytest.ini  rag_pipeline.py  requirements-dev.txt  requirements.txt  test_rag_pipeline.py  tests.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
5_Star_UseCases/: 5star_master_table.csv  5star_master_table.json  ai_type_taxonomy.json  build_ai_folder_structure.sh  download_all_datasets.sh  enterprise_ai_mapping.csv  load_to_sqlite.py  run_unify_and_load.sh  unify_data.py
backend/: config.py  database.py  main.py
backend/core/: auth.py  config.py  dependencies.py  encryption.py  error_handlers.py  exceptions.py  logging_config.py  middleware.py  utils.py
backend/repositories/: alert_repo.py  audit_repo.py  base.py  dataset_repo.py  integration_repo.py  job_repo.py  text2sql_repo.py
backend/routers/: alerts.py  audit.py  compare.py  export.py  integrations.py  jobs.py  logs.py  metrics.py  monitoring.py  process.py  public.py  regulatory.py  scoring.py  statistics.py  upload.py  (+2 more)
docs/: README.md
frontend/: FOLDER_STRUCTURE.md  index.html  package.json
scripts/: generate_use_case_docs.py
(+190 files in other folders)
